--- a/src/App.css
+++ b/src/App.css
@@ -484,3 +484,32 @@ body {
 .animate-modal-enter {
   animation: modalEnter 0.2s ease-out;
 }
+
+/* Starry Background Styles */
+.starry-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  pointer-events: none;
+}
+
+.dark-mode .starry-background {
+  background-color: #121212;
+}
+
+/* Make sure other elements don't hide the stars */
+.dark-mode {
+  background-color: transparent !important;
+}
+
+.dark-mode .bg-gray-900 {
+  background-color: transparent !important;
+}
+
+/* Adjust existing bg-element styles */
+.bg-element {
+  z-index: -1;
+}
